# TestTone

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_macos.zsh  build_windows.ps1  installer.iss  update_version.ps1
cmake/: Version.cmake
docs/: AAX_DEVELOPER_BUILD_GUIDE.md  AAX_LICENSE_REQUEST_EMAIL.md  AAX_SDK_README.md  AAX_SIGNING_GUIDE.md
plugin/: CMakeLists.txt
plugin/src/: KeyEventForwarder.cpp  KeyEventForwarder.h  KeyEventForwarder_mac.mm  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h.in
plugin/src/dsp/: ToneGenerator.cpp  ToneGenerator.h
scripts/: AAX_SIGNING_README.md  update_version.ps1
wasm/: CMakeLists.txt  build.sh
wasm/src/: tone_generator.h  wasm_exports.cpp
webui/: .firebaserc  firebase.json  index.html  index.web.html  package-lock.json  package.json  tsconfig.node.json  vite.config.web.ts
webui/public/: debug.html
webui/public-web/worklet/: dsp-processor.js
webui/scripts/: sync-web-demos.cjs
webui/src/: App.css  App.tsx  vite-env.d.ts
webui/src/assets/: licenses.json
webui/src/bridge/web/: WebAudioEngine.ts  WebBridgeManager.ts  juce-shim.ts
webui/src/components/: GlobalDialog.tsx  HorizontalParameter.tsx  LicenseDialog.tsx  ParameterFader.tsx  PresetSliderCombo.tsx  WebDemoMenu.tsx
webui/src/hooks/: useFineAdjustPointer.ts  useNumberInputAdjust.ts
webui/src/juce/: JuceBound.tsx
webui/src/types/: index.ts
